--- a/Mvc5BlogProject/Views/User/Index.cshtml
+++ b/Mvc5BlogProject/Views/User/Index.cshtml
@@ -33,7 +33,7 @@
 
                                     <li class="nav-item"><a class="nav-link" href="#timeline" data-toggle="tab">Timeline</a></li>
 
-                                    <li class="nav-item"><a class="nav-link" href="#settings" data-toggle="tab">Settings</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#settings" data-toggle="tab">Ayarlar</a></li>
 
                                 </ul>
 
