--- a/Mvc5BlogProject/Views/User/Partial1.cshtml
+++ b/Mvc5BlogProject/Views/User/Partial1.cshtml
@@ -1,50 +1,88 @@
 ﻿@model IEnumerable<Entities.Concrete.Author>
 
 <div class="tab-pane" id="settings">
+    @foreach(var item in Model) {
     <form class="form-horizontal">
         <div class="form-group row">
-            <label for="inputName" class="col-sm-2 col-form-label">Name</label>
+            <label for="inputName" class="col-sm-2 col-form-label">Ad Soyad</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputName" placeholder="Name">
+                <input type="email" class="form-control" id="inputName" value="@item.AuthorName">
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+            <label for="inputEmail" class="col-sm-2 col-form-label">Mail Adresi</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                <input type="email" class="form-control" id="inputEmail" value="@item.AuthorGmail">
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputName2" class="col-sm-2 col-form-label">Name</label>
+            <label for="inputName2" class="col-sm-2 col-form-label">Meslek</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputName2" placeholder="Name">
+                <input type="text" class="form-control" id="inputName2" value="@item.AuthorTitle">
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputExperience" class="col-sm-2 col-form-label">Experience</label>
+            <label for="inputExperience" class="col-sm-2 col-form-label">Yetenekler</label>
             <div class="col-sm-10">
-                <textarea class="form-control" id="inputExperience" placeholder="Experience"></textarea>
+                <input type="text" class="form-control" id="inputName2" value="@item.AboutShort">
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputSkills" class="col-sm-2 col-form-label">Skills</label>
+            <label for="inputSkills" class="col-sm-2 col-form-label">Telefon</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputSkills" placeholder="Skills">
+                <input type="text" class="form-control" id="inputSkills" value="@item.PhoneNumber">
             </div>
         </div>
         <div class="form-group row">
+            <label for="inputSkills" class="col-sm-2 col-form-label">Instagram</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputSkills" value="@item.AuthorInstagram">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputSkills" class="col-sm-2 col-form-label">Twitter</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputSkills" value="@item.AuthorTwitter">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputSkills" class="col-sm-2 col-form-label">Fotoğraf</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputSkills" value="@item.AuthorImage">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputSkills" class="col-sm-2 col-form-label">Şifre</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputSkills" value="@item.Password">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputSkills" class="col-sm-2 col-form-label">Şifre Tekrar</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputSkills">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputSkills" class="col-sm-2 col-form-label">Hakkımda</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputSkills" value="@item.AuthorAbout">
+            </div>
+        </div>
+         <div class="form-group row">
             <div class="offset-sm-2 col-sm-10">
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox"> I agree to the <a href="#">terms and conditions</a>
+                        <input type="checkbox"> Şifremi değiştirmek istiyorum.
                     </label>
                 </div>
             </div>
         </div>
         <div class="form-group row">
             <div class="offset-sm-2 col-sm-10">
-                <button type="submit" class="btn btn-danger">Submit</button>
+                <button type="submit" class="btn btn-danger">Bilgilerimi Güncelle</button>
             </div>
         </div>
     </form>
+    }
 </div>
