--- a/Mvc5BlogProject/Views/User/BlogList.cshtml
+++ b/Mvc5BlogProject/Views/User/BlogList.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "BlogList";
     Layout = "~/Views/Shared/_AuthorLayout.cshtml";
 }
-
+@{ string color = "";}
+@{ string caseName = "";}
 <!DOCTYPE html>
 
 <html>
@@ -83,6 +84,27 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
+                            if (item.BlogRating >= 85)
+                            {
+                                color = "post-category text-white bg-success mb-3";
+                                caseName = "Çok iyi";
+                            }
+                            if (item.BlogRating >= 70 && item.BlogRating <= 84)
+                            {
+                                color = "post-category text-white bg-info mb-3";
+                                caseName = "Başarılı";
+                            }
+                            if (item.BlogRating >= 50 && item.BlogRating <= 69)
+                            {
+                                color = "post-category text-white bg-warning mb-3";
+                                caseName = "Fena Değil";
+                            }
+                            if (item.BlogRating >= 0 && item.BlogRating <= 49)
+                            {
+                                color = "post-category text-white bg-danger mb-3";
+                                caseName = "Vasat";
+                            }
+
                             <tr>
 
                                 <td>@item.BlogId</td>
@@ -109,14 +131,14 @@
 
                                 <td class="project-state">
 
-                                    <span class="badge badge-success">Success</span>
+                                    <span class="badge @color">@caseName</span>
 
                                 </td>
 
                                 <td class="project-actions text-right">
 
 
-                                    <a class="btn btn-info btn-sm" href="#">
+                                    <a class="btn btn-info btn-sm" href="/User/UpdateBlog/@item.BlogId/">
 
                                         <i class="fas fa-pencil-alt">
 
