--- a/Mvc5BlogProject/Views/User/Partial1.cshtml
+++ b/Mvc5BlogProject/Views/User/Partial1.cshtml
@@ -1,75 +1,82 @@
 ﻿@model IEnumerable<Entities.Concrete.Author>
 
 <div class="tab-pane" id="settings">
-    @foreach(var item in Model) {
+    @using(Html.BeginForm("UpdateUserProfile","User",FormMethod.Post)){
+    foreach (var item in Model)
+    {
     <form class="form-horizontal">
+        <div class="form-group row">
+            <div class="col-sm-10">
+                <input type="hidden" class="form-control" name="AuthorId" value="@item.AuthorId">
+            </div>
+        </div>
         <div class="form-group row">
             <label for="inputName" class="col-sm-2 col-form-label">Ad Soyad</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputName" value="@item.AuthorName">
+                <input type="text" class="form-control" name="AuthorName" value="@item.AuthorName">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputEmail" class="col-sm-2 col-form-label">Mail Adresi</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail" value="@item.AuthorGmail">
+                <input type="email" class="form-control" name="AuthorGmail" value="@item.AuthorGmail">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputName2" class="col-sm-2 col-form-label">Meslek</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputName2" value="@item.AuthorTitle">
+                <input type="text" class="form-control" name="AuthorTitle" value="@item.AuthorTitle">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputExperience" class="col-sm-2 col-form-label">Yetenekler</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputName2" value="@item.AboutShort">
+                <input type="text" class="form-control" name="AboutShort" value="@item.AboutShort">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputSkills" class="col-sm-2 col-form-label">Telefon</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputSkills" value="@item.PhoneNumber">
+                <input type="text" class="form-control" name="PhoneNumber" value="@item.PhoneNumber">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputSkills" class="col-sm-2 col-form-label">Instagram</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputSkills" value="@item.AuthorInstagram">
+                <input type="text" class="form-control" name="AuthorInstagram" value="@item.AuthorInstagram">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputSkills" class="col-sm-2 col-form-label">Twitter</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputSkills" value="@item.AuthorTwitter">
+                <input type="text" class="form-control" name="AuthorTwitter" value="@item.AuthorTwitter">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputSkills" class="col-sm-2 col-form-label">Fotoğraf</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputSkills" value="@item.AuthorImage">
+                <input type="text" class="form-control" name="AuthorImage" value="@item.AuthorImage">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputSkills" class="col-sm-2 col-form-label">Şifre</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputSkills" value="@item.Password">
+                <input type="text" class="form-control" name="Password" value="@item.Password">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputSkills" class="col-sm-2 col-form-label">Şifre Tekrar</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputSkills">
+                <input type="text" class="form-control" name="inputSkills">
             </div>
         </div>
         <div class="form-group row">
             <label for="inputSkills" class="col-sm-2 col-form-label">Hakkımda</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputSkills" value="@item.AuthorAbout">
+                <input type="text" class="form-control" name="AuthorAbout" value="@item.AuthorAbout">
             </div>
         </div>
-         <div class="form-group row">
+        <div class="form-group row">
             <div class="offset-sm-2 col-sm-10">
                 <div class="checkbox">
                     <label>
@@ -84,5 +91,6 @@
             </div>
         </div>
     </form>
+    }
     }
 </div>
