--- a/Mvc5BlogProject/Views/Login/AdminLogin.cshtml
+++ b/Mvc5BlogProject/Views/Login/AdminLogin.cshtml
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login V1</title>
+    <title>Admin Giriş Paneli</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
@@ -34,7 +34,8 @@
                 <div class="login100-pic js-tilt" data-tilt>
                     <img src="/Login_v1/images/img-01.png" alt="IMG">
                 </div>
-
+            @using (Html.BeginForm("AdminLogin", "Login", FormMethod.Post))
+            {
                 <form class="login100-form validate-form">
                     <span class="login100-form-title">
                         Admin Giriş Paneli
@@ -63,9 +64,9 @@
                     </div>
 
                     <div class="text-center p-t-12">
-                       
+
                         <a class="txt2" href="#">
-                          Şifremi Unuttum?
+                            Şifremi Unuttum?
                         </a>
                     </div>
 
@@ -76,6 +77,7 @@
                         </a>
                     </div>
                 </form>
+            }
             </div>
         </div>
     </div>
