--- a/Mvc5BlogProject/Views/About/Footer.cshtml
+++ b/Mvc5BlogProject/Views/About/Footer.cshtml
@@ -13,7 +13,7 @@
                 <!-- <h3 class="footer-heading mb-4">Navigation</h3> -->
                 <ul class="list-unstyled float-left mr-5">
                     <li><a href="/About/Index/">Hakkımızda</a></li>
-                    <li><a href="/Contact/Index/">İletişim</a></li>
+                    <li><a href="/Contact/SendMessage/">İletişim</a></li>
                     <li><a href="/Blog/Index/">Ana Sayfa</a></li>
                     <li><a href="/Login/AuthorLogin/">Yazar Girişi</a></li>
                 </ul>
