--- a/Mvc5BlogProject/Views/Comment/LeaveComment.cshtml
+++ b/Mvc5BlogProject/Views/Comment/LeaveComment.cshtml
@@ -16,7 +16,7 @@
             <textarea name="CommentText" cols="30" rows="10" class="form-control"></textarea>
         </div>
         <div class="form-group">
-            <input type="submit" value="Gönder" class="btn btn-primary">
+            <input type="submit" value="Gönder" class="btn btn-primary" onclick="document.location.reload(true);">
         </div>
 
     </form>
