--- a/Mvc5BlogProject/Views/Category/AdminCategoryList.cshtml
+++ b/Mvc5BlogProject/Views/Category/AdminCategoryList.cshtml
@@ -60,13 +60,13 @@
 
                             </th>
 
-                            <th style="width: 30%">
+                            <th style="width: 15%">
 
                                 Son Blog
 
                             </th>
 
-                            <th>
+                            <th  style="width: 20%">
 
                                 Kategori Bar
 
@@ -181,12 +181,33 @@
                         }
                     </tbody>
                 </table>
+
             </div>
             <!-- /.card-body -->
         </div>
         <!-- /.card -->
     </section>
-
+    <button class="btn btn-primary" data-toggle="modal" data-target="#Modal1">Yeni Kategori Ekle</button>
+    <div class="modal" id="Modal1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title">Yeni Kategori Eklem Paneli</h2>
+                </div>
+                <form method="post" action="/Category/AdminCategoryAdd/">
+                    <div class="modal-body">
+                        <label>Kategori Adı</label>
+                        <input type="text" name="CategoryName" class="form-control" />
+                        <br />
+                        <label>Kategori Açıklama</label>
+                        <input type="text" name="CategoryDescription" class="form-control" />
+                        <br />
+                        <button class="btn btn-info">Kaydet</button>
+                    </div>              
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
